# oasis

./: .env.example  .geminiignore  .gitignore  2FA_AND_SUBSCRIPTION_SETUP.md  APPLY_RIPPLES_STORAGE_RLS.sql  BETA_READINESS_PLAN.md  CALLING_V2_PLAN.md  CHANGELOG.md  CLEAR_ALL_MESSAGES.sql  CODEBASE_IMPROVEMENT_TRACKER.md  FEED_LAYOUT_EXPERIMENT_PLAN.md  FINAL_FIX_GOOGLE_AUTH_TRIGGER.sql  FINAL_PREFLIGHT_AUDIT.md  FIX_CALL_NOTIFICATION_CAST_ERROR.sql  FIX_CONVERSATION_ORDER_FINAL.sql  FIX_PROFILES_SCHEMA.sql  FIX_REDUNDANT_TRIGGERS.sql  FIX_RLS_AND_TRIGGER_FINAL.sql  GEMINI.md  IMPLEMENTATION_PLAN.md  LICENSE  MIGRATION_PLAN.md  MIGRATION_TRACKER.md  NEXT_SESSION_PROMPT.md  PLAN.md  README.md  RELEASE_READY_CHECKLIST.md  RESTORE_FEED_FUNCTIONS.sql  RIPPLES_AND_CLEANUP.sql  SECURITY.md  STUDY_SESSIONS_PLAN.md  V4.0_UPDATE_CHANGELOG.md  V4_UI.md  WOW_FACTOR_PLAN.md  analysis_errors.txt  analysis_options.yaml  analysis_results.txt  base64.txt  build_and_package.ps1  console_logs.txt  (+23 more)
.opencode/: gsd-file-manifest.json  opencode.json
.planning/: FULL-CODEBASE-REVIEW.md  ROADMAP.md  STATE.md
.sentry-native/: last_crash  metadata
.sisyphus/: tech_debt_fix_plan.md
REFRACTOR_PLAN/: chat_screen_refactor.md  draft.md
SQL FILES IN ROOT FOLDER/: ADD_UNLOCK_AT_TO_CANVAS.sql  ADD_V2_ENCRYPTION_COLUMNS.sql  COMPLETE_MASTER_SCHEMA.sql  (+8 more)
stubs/flutter_secure_storage_windows/windows/: CMakeLists.txt  flutter_secure_storage_windows_plugin.cpp
stubs/flutter_secure_storage_windows/windows/include/flutter_secure_storage_windows/: flutter_secure_storage_windows_plugin.h
(+1537 files in other folders)
